@@ -44,6 +44,7 @@ public final class Constants {
 
     public final static String SETTINGS_APPLIED = "settings_applied";
     public final static String THEME_APPLIED = "theme_applied";
+    public final static String PREVIEW_RUNNING = "preview_running";
 
     public final static String LAST_VERSION = "last_version";
     public final static String FEEDBACK_POP_UP_COUNT = "feedback_pop_up_count";
